k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api-service
  labels:
    app: task-api
spec:
  selector:
    app: task-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
