k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-api-ingress
  labels:
    app: task-api
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  ingressClassName: traefik-dev
  rules:
  - host: <your-url>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-api-service
            port:
              number: 80
